2003-10-23  Pavel Roskin  <proski@gnu.org>

	* main.c (process_args): Use cast to avoid warning.

	* view.c (view_callback): Don't close the current dialog when
	the viewer is framed.

2003-10-16  Pavel Roskin  <proski@gnu.org>

	* main.c (update_one_panel_widget): Use VFS_SETCTL_FLUSH for the
	current directory.  This fixes Ctrl-R on fish.
	* vfsdummy.h: Remove unused functions.

	* main.c (process_args): Use VFS_SETCTL_LOGFILE for ftpfs.

2003-10-15  Pavel Roskin  <proski@gnu.org>

	* glibcompat.h: Define g_try_malloc as malloc for glib 1.2.x.

	* view.c (load_view_file): Use g_try_malloc() because the
	failure to allcate memory is acceptable here.
	Reported by Pavel S. Shirshov <pavelsh@mail.ru>

2003-10-14  Pavel Roskin  <proski@gnu.org>

	* tree.c: Remove dead code.
	* treestore.c (tree_store_add_entry): Make static.
	(tree_store_start_check): Likewise.

	* cmd.c: Cleanup of unneeded global functions and data.
	* color.c: Likewise.
	* dir.c: Likewise.
	* file.c: Likewise.
	* filegui.c: Likewise.
	* hotlist.c: Likewise.
	* layout.c: Likewise.
	* main.c: Likewise.
	* panelize.c: Likewise.
	* wtools.c: Likewise.

2003-10-12  Pavel Roskin  <proski@gnu.org>

	* screen.c (do_enter_on_file_entry): Remove annoying message "no
	action taken".  Simplify logic.  Confirmation affects VFS too.

2003-10-11  Pavel Roskin  <proski@gnu.org>

	* vfsdummy.h: New file to replace vfs.h if VFS is disabled.
	* Makefile.am: Add vfsdummy.h.
	* global.h [!USE_VFS]: Include vfsdummy.h.  Fix files that
	include vfs.h directly.

	* file.c (check_hardlinks): Use vfs_file_class_flags().

	* main.c (_do_panel_cd): Use vfs_release_path().

	* file.c: Use struct vfs_class, not type vfs, which should be
	internal to VFS code.

2003-10-08  Pavel Roskin  <proski@gnu.org>

	* background.h: Eliminate background_wait variable.  Adjust all
	dependencies.

	* main.c (argument_table): Reorder options into logical groups.

2003-10-07  Pavel Roskin  <proski@gnu.org>
